[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/world.gd" type="Script" id=1]
[ext_resource path="res://assets/solid_block.png" type="Texture" id=2]
[ext_resource path="res://src/entities/Enemies/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/mechanic/dead-eye.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Obstacles" type="Node" parent="."]
editor/display_folded = true

[node name="Obstacle" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 0, 30 )
rotation = -3.14159
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle"]
shape = SubResource( 1 )

[node name="Obstacle2" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( -152, -137 )
rotation = -4.71239
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle2"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle2"]
shape = SubResource( 2 )

[node name="Obstacle3" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 152, -137 )
rotation = -4.71239
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle3"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle3"]
shape = SubResource( 3 )

[node name="Obstacle4" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( -41.2111, -404.473 )
rotation = -3.92699
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle4"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle4"]
shape = SubResource( 3 )

[node name="Obstacle5" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 262.858, -404.449 )
rotation = -3.92699
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle5"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle5"]
shape = SubResource( 3 )

[node name="Obstacle6" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 530.274, -515.274 )
rotation = -3.14159
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle6"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle6"]
shape = SubResource( 3 )

[node name="Obstacle7" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 184.955, -630.653 )
rotation = -3.92699
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle7"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle7"]
shape = SubResource( 3 )

[node name="Obstacle8" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 452.657, -741.271 )
rotation = -3.14159
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle8"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle8"]
shape = SubResource( 3 )

[node name="Obstacle9" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 698.1, -667.185 )
rotation = -1.5708
scale = Vector2( 10, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle9"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle9"]
shape = SubResource( 3 )

[node name="Obstacle10" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 620.805, -780.62 )
rotation = -1.5708
scale = Vector2( 2.96, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle10"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle10"]
shape = SubResource( 3 )

[node name="Obstacle11" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 659.419, -820.318 )
scale = Vector2( 2.92, 0.5 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle11"]
modulate = Color( 0.972549, 0.827451, 0.164706, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle11"]
shape = SubResource( 3 )

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -90, -270 )
travel_points = [ Vector2( -90, -270 ), Vector2( 120, -270 ) ]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 30, -390 )

[node name="DeadEye" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 5 )

[node name="DeadEyeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0.670588, 0.164706, 0.172549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 1
[connection signal="on_activate_actions" from="." to="DeadEye" method="_on_World_on_activate_actions"]
[connection signal="on_point_selected" from="." to="DeadEye" method="_on_World_on_point_selected"]
